force-app/main/default/objects/Solar_Plant__c/Solar_Plant__c.object-meta.xml
<CustomObject>
    <description>Objeto para gerenciar usinas solares.</description>
    <label>Solar Plant</label>
    <nameField>
        <label>Solar Plant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solar Plants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>