force-app/main/default/objects/Solar_Plant__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solar Plants</relationshipLabel>
    <relationshipName>Solar_Plants</relationshipName>
    <type>Lookup</type>
</CustomField>