force-app/main/default/objects/Solar_Plant__c/fields/Capacity_kWp__c.field-meta.xml
<CustomField>
    <fullName>Capacity_kWp__c</fullName>
    <label>Capacidade</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>