force-app/main/default/objects/Solar_Plant__c/fields/Estimated_Production__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Production__c</fullName>
    <label>Produção estimada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>