force-app/main/default/objects/Solar_Plant__c/fields/Installation_Address__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address__c</fullName>
    <label>Endereço</label>
    <type>TextArea</type>
</CustomField>