force-app/main/default/objects/Solar_Plant__c/fields/Inverter_Type__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Type__c</fullName>
    <label>Tipo de inversor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Microinverter</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>