force-app/main/default/objects/Solar_Plant__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Número</label>
    <length>20</length>
    <type>Text</type>
</CustomField>