force-app/main/default/objects/Solar_Plant__c/fields/Number_of_Panels__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Panels__c</fullName>
    <label>Número de painéis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>